--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>holi</title>
 </head>
 <body>
-    <h1>holi prueba de js</h1>
+    <h1>segunda preentrega</h1>
 
     <script src="./js/main.js"></script>
 </body>
