--- a/index.html
+++ b/index.html
@@ -8,8 +8,43 @@
     <title>holi</title>
 </head>
 <body>
-    <h1>segunda preentrega</h1>
-
+    <body>
+        <header>
+            <h1>Tienda en Línea</h1>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Productos</a>
+                <a href="#">Contacto</a>
+                <a href="#">Carrito</a>
+            </nav>
+        </header>
+    
+        <main>
+            <div class="container">
+                <div class="product">
+                    <img src="./img/guitarra.webp" alt="Producto 1">
+                    <h2>Producto 1</h2>
+                    <p>Descripción del producto 1. Precio: $10.00</p>
+                    <button>Añadir al carrito</button>
+                </div>
+                <div class="product">
+                    <img src="./img/guitarra2.png" alt="Producto 2">
+                    <h2>Producto 2</h2>
+                    <p>Descripción del producto 2. Precio: $20.00</p>
+                    <button>Añadir al carrito</button>
+                </div>
+                <div class="product">
+                    <img src="./img/guitarratres.jpg" alt="Producto 3">
+                    <h2>Producto 3</h2>
+                    <p>Descripción del producto 3. Precio: $30.00</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+        </main>
+    
+        <footer>
+            <p>&copy; 2024 Tienda en Línea. Todos los derechos reservados.</p>
+        </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
