--- a/index.html
+++ b/index.html
@@ -5,46 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" type="image/jpg" href="./img/skull.jpg">
-    <title>holi</title>
+    <title>Tienda en Línea</title>
 </head>
 <body>
-    <body>
-        <header>
-            <h1>Tienda en Línea</h1>
-            <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Productos</a>
-                <a href="#">Contacto</a>
-                <a href="#">Carrito</a>
-            </nav>
-        </header>
-    
-        <main>
-            <div class="container">
-                <div class="product">
-                    <img src="./img/guitarra.webp" alt="Producto 1">
-                    <h2>Producto 1</h2>
-                    <p>Descripción del producto 1. Precio: $10.00</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="product">
-                    <img src="./img/guitarra2.png" alt="Producto 2">
-                    <h2>Producto 2</h2>
-                    <p>Descripción del producto 2. Precio: $20.00</p>
-                    <button>Añadir al carrito</button>
-                </div>
-                <div class="product">
-                    <img src="./img/guitarratres.jpg" alt="Producto 3">
-                    <h2>Producto 3</h2>
-                    <p>Descripción del producto 3. Precio: $30.00</p>
-                    <button>Añadir al carrito</button>
-                </div>
+    <header>
+        <h1>Tienda en Línea</h1>
+        <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Productos</a>
+            <a href="#">Contacto</a>
+            <a href="#">Carrito</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="product">
+                <img src="./img/guitarra.webp" alt="Producto 1">
+                <h2>Producto 1</h2>
+                <p>Descripción del producto 1. Precio: $10.00</p>
+                <button>Añadir al carrito</button>
             </div>
-        </main>
+            <div class="product">
+                <img src="./img/guitarra2.png" alt="Producto 2">
+                <h2>Producto 2</h2>
+                <p>Descripción del producto 2. Precio: $20.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarratres.webp" alt="Producto 3">
+                <h2>Producto 3</h2>
+                <p>Descripción del producto 3. Precio: $30.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra4.jpg" alt="Producto 4">
+                <h2>Producto 4</h2>
+                <p>Descripción del producto 4. Precio: $40.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra 5.webp" alt="Producto 5">
+                <h2>Producto 5</h2>
+                <p>Descripción del producto 5. Precio: $50.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra6.jpeg" alt="Producto 6">
+                <h2>Producto 6</h2>
+                <p>Descripción del producto 6. Precio: $60.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra6.jpeg" alt="Producto 7">
+                <h2>Producto 7</h2>
+                <p>Descripción del producto 7. Precio: $70.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra 8.jpg" alt="Producto 8">
+                <h2>Producto 8</h2>
+                <p>Descripción del producto 8. Precio: $80.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra9.jpg" alt="Producto 9">
+                <h2>Producto 9</h2>
+                <p>Descripción del producto 9. Precio: $90.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+            <div class="product">
+                <img src="./img/guitarra10.webp" alt="Producto 10">
+                <h2>Producto 10</h2>
+                <p>Descripción del producto 10. Precio: $100.00</p>
+                <button>Añadir al carrito</button>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Tienda en Línea. Todos los derechos reservados.</p>
+    </footer>
     
-        <footer>
-            <p>&copy; 2024 Tienda en Línea. Todos los derechos reservados.</p>
-        </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
