--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" type="image/jpg" href="./img/skull.jpg">
-    <title>Tienda en Línea</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <title>La Casa de las Guitarras</title>
 </head>
+
 <body>
     <header>
-        <h1>Tienda en Línea</h1>
+        <h1>La Casa de las Guitarras</h1>
         <nav>
             <a href="#">Inicio</a>
             <a href="#">Productos</a>
             <a href="#">Contacto</a>
-            <a href="#">Carrito</a>
+            <a href="#" id="cart-link">Carrito</a>
         </nav>
     </header>
 
@@ -24,61 +29,61 @@
                 <img src="./img/guitarra.webp" alt="Producto 1">
                 <h2>Producto 1</h2>
                 <p>Descripción del producto 1. Precio: $10.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="1" data-price="10.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra2.png" alt="Producto 2">
                 <h2>Producto 2</h2>
                 <p>Descripción del producto 2. Precio: $20.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="2" data-price="20.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarratres.webp" alt="Producto 3">
                 <h2>Producto 3</h2>
                 <p>Descripción del producto 3. Precio: $30.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="3" data-price="30.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra4.jpg" alt="Producto 4">
                 <h2>Producto 4</h2>
                 <p>Descripción del producto 4. Precio: $40.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="4" data-price="40.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra 5.webp" alt="Producto 5">
                 <h2>Producto 5</h2>
                 <p>Descripción del producto 5. Precio: $50.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="5" data-price="50.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra6.jpeg" alt="Producto 6">
                 <h2>Producto 6</h2>
                 <p>Descripción del producto 6. Precio: $60.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="6" data-price="60.00">Añadir al carrito</button>
             </div>
             <div class="product">
-                <img src="./img/guitarra6.jpeg" alt="Producto 7">
+                <img src="./img/guitarra7.webp" alt="Producto 7">
                 <h2>Producto 7</h2>
                 <p>Descripción del producto 7. Precio: $70.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="7" data-price="70.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra 8.jpg" alt="Producto 8">
                 <h2>Producto 8</h2>
                 <p>Descripción del producto 8. Precio: $80.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="8" data-price="80.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra9.jpg" alt="Producto 9">
                 <h2>Producto 9</h2>
                 <p>Descripción del producto 9. Precio: $90.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="9" data-price="90.00">Añadir al carrito</button>
             </div>
             <div class="product">
                 <img src="./img/guitarra10.webp" alt="Producto 10">
                 <h2>Producto 10</h2>
                 <p>Descripción del producto 10. Precio: $100.00</p>
-                <button>Añadir al carrito</button>
+                <button class="add-to-cart" data-product="10" data-price="100.00">Añadir al carrito</button>
             </div>
         </div>
     </main>
@@ -86,9 +91,16 @@
     <footer>
         <p>&copy; 2024 Tienda en Línea. Todos los derechos reservados.</p>
     </footer>
-    
+
+    <div id="cart" style="display:none;">
+        <h2>Tu Carrito</h2>
+        <div id="cart-items"></div>
+        <p id="total-price">Total: $0.00</p>
+        <button onclick="clearCart()">Vaciar Carrito</button>
+        <button id="checkout-button">Comprar</button>
+    </div>
+
     <script src="./js/main.js"></script>
 </body>
+
 </html>
-
-
